membuat halaman pilih level jabatan

--- a/client/src/Pages/ExpiredLink.css
+++ b/client/src/Pages/ExpiredLink.css
@@ -11,6 +11,6 @@
     .expiredlinksvg .exp {
         width: 850px;
         height: 800px;
-        margin-left: 20px;
+        margin-left: px;
     }
 }
