--- a/client/src/Pages/LevelJabatan.css
+++ b/client/src/Pages/LevelJabatan.css
@@ -16,7 +16,7 @@
 
 .selectlevel {
     margin-top: 10%;
-    width: 60%;
+    /* width: 60%; */
 }
 
 .selectlevel p {
@@ -32,11 +32,11 @@
     width: 13vw;
     max-width: 134px;
     border-color: azure;
-    font-size: ;
+    /* font-size: ; */
     color: rgb(29, 21, 21);
 }
 
-#submitlevel:hover {
+/* #submitlevel:hover {
     margin-top: 30px;
     border-radius: 10px;
     font-weight: bold;
@@ -44,31 +44,26 @@
     width: 14vw;
     max-width: 150px;
     border-color: azure;
-    font-size: ;
-}
+} */
 
-@media only screen and (max-width: 600px) {
-    .containerlevel {
-        display: none;
-    }
-
+/* @media only screen and (max-width: 600px) {
     .selectlevelhpscreen {
         margin: 30px;
         margin-top: 90px;
     }
 
-    .btnlevel{
+    .btnlevel {
         text-align: center;
         margin-right: 7vw;
     }
 
-.btnlevel .btn {
+    .btnlevel .btn {
         margin: auto;
         margin-top: 25px;
         line-height: 1.25rem;
         padding: 0px;
         border-radius: 5px;
-        font-weight:bolder ;
+        font-weight: bolder;
         font-size: 2.8vw;
         box-shadow: 1px 1px;
 
@@ -78,7 +73,6 @@
         height: 7vw;
         max-width: 90px;
         max-height: 50px;
-        
     }
     .btnlevel .btn:hover {
         background-color: rgb(214, 165, 2);
@@ -88,12 +82,11 @@
     }
 
     .selectlevelhpscreen h1 {
-        margin-bottom: ;
         font-size: medium;
     }
-}
+} */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
     .selectlevelhpscreen {
         display: none;
     }
