create and fix hasil mbti and disc page

--- a/client/src/Pages/user/HasilMbti.css
+++ b/client/src/Pages/user/HasilMbti.css
@@ -1,11 +1,12 @@
 .container-mbti {
-    padding: 10px;
+    padding: 100px;
+    padding-top: 30px;
 }
 
 /* <--------------data diri top section---------------> */
 
 #data-diri-MBTI {
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: 20px;
     overflow: hidden;
     display: block;
@@ -38,18 +39,25 @@
 /* <--------------MBTI---------------> */
 .mbti {
     text-align: center;
-    font-size: 2.5vw;
+    margin-bottom: 50px;
+}
+.mbti h1 {
+    font-size: 10vw;
+}
+.mbti h5 {
+    font-size: 3vw;
 }
 /* <--------------end MBTI---------------> */
 /* <--------------Karakter---------------> */
 .karakter {
     margin: auto;
     background-color: crimson;
-    width: 80%;
+    width: 100%;
     border-radius: 10px;
     box-sizing: border-box;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 40px;
+
+    margin-bottom: 50px;
 
     text-align: center;
     font-size: 200%;
@@ -59,10 +67,14 @@
     -webkit-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
     -moz-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
 }
+
+.karakter h2 {
+    margin-top: 20px;
+    font-size: 3vw;
+}
+
 .karakter ul {
-    display: inline-block;
-    /* margin-right: 20px; */
-    margin-top: -10px;
+    margin-top: 30px;
 
     text-align: left;
 }
@@ -94,6 +106,7 @@
     margin-bottom: 50px;
     padding-bottom: 30px;
     grid-auto-flow: column;
+    width: 100%;
 }
 
 .pekerjaan {
@@ -101,6 +114,7 @@
     grid-column-end: 6;
     margin: auto;
     font-size: 150%;
+    margin-bottom: 30px;
 }
 .pekerjaan1 {
     grid-area: 2 / 1 / 3 / 2;
@@ -136,17 +150,44 @@
 
 @media only screen and (max-width: 700px) {
     .container-mbti {
-        padding: 0;
+        padding: 10px;
+    }
+    #data-diri-MBTI {
+        margin-top: 15px;
+        margin-bottom: 20px;
+        overflow: hidden;
+        display: block;
+        font-size: 3vw;
+        margin-left: -10px;
+    }
+
+    .mbti {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .mbti h1 {
+        font-size: 10vw;
+    }
+    .mbti h5 {
+        font-size: 3vw;
     }
 
     .karakter {
+        margin-top: 0px;
+        padding-top: 2px;
+        margin-bottom: 25px;
         font-size: 100%;
         padding-left: 2px;
+        padding-right: 10px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
             rgba(0, 0, 0, 0.12) 0px -12px 30px,
             rgba(0, 0, 0, 0.12) 0px 4px 6px,
             rgba(0, 0, 0, 0.17) 0px 12px 13px,
             rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+
+    .karakter h2 {
+        font-size: 150%;
     }
 
     .karakter ul li {
@@ -155,6 +196,73 @@
     }
 }
 
+/* <--------------Saran pekerjaan-----------------> */
+
+.saran-pekerjaan {
+    background-color: crimson;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+    color: aliceblue;
+    padding-right: 5%;
+    padding-left: 4%;
+
+    padding-top: 30px;
+    box-sizing: border-box;
+    font-size: large;
+    box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -webkit-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -moz-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    margin-bottom: 50px;
+    padding-bottom: 30px;
+    display: inline-block;
+
+    width: 100%;
+    text-align: center;
+}
+
+.pekerjaan {
+    margin: auto;
+    font-size: 150%;
+    margin-bottom: 30px;
+    text-align: center;
+    display: block;
+}
+.pekerjaan1 {
+    display: inline-block;
+}
+.pekerjaan2 {
+    display: inline-block;
+}
+.pekerjaan3 {
+    display: inline-block;
+}
+.pekerjaan4 {
+    display: inline-block;
+}
+.pekerjaan5 {
+    display: inline-block;
+}
+.pekerjaan6 {
+    display: inline-block;
+}
+.pekerjaan7 {
+    display: inline-block;
+}
+.pekerjaan8 {
+    display: inline-block;
+}
+
+.pekerjaan9 {
+    display: inline-block;
+}
+.pekerjaan10 {
+    display: inline-block;
+}
+.pekerjaan11 {
+    display: inline-block;
+}
+/* <-------------- END Saran pekerjaan-----------------> */
 /* 
 .saran-profesi {
     margin: auto;
@@ -171,4 +279,4 @@
 }
 
 .saran-profesi ul li {
-    /* display: inline-block; */
+    display: inline-block; */
