--- a/client/src/Pages/user/HasilDisc.css
+++ b/client/src/Pages/user/HasilDisc.css
@@ -1,29 +1,20 @@
-/* overflow: hidden; */
-/* position: fixed; */
+.container-hasildisc {
+    padding: 0px 70px;
+    /* overflow: hidden; */
+    /* position: fixed; */
+}
 
 /* <-------Top section--------> */
 .header-hasil {
-    background-color: #cb243e;
-    /* box-sizing: border-box; */
-    padding: 5px 10px;
-    width: 35vw;
-    height: 70px;
-    min-width: 145px;
-    color: white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     text-align: center;
     margin: auto;
-    /* box-sizing: border-box; */
-}
+    margin-top: 50px;
 
-.header-hasil p {
-    font-weight: 900px;
-    font-size: 1.5vw;
+    /* box-sizing: border-box; */
 }
 
 #data-hasil-test {
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 30px;
     overflow: hidden;
     display: block;
@@ -46,18 +37,18 @@
     margin-bottom: 20px;
 }
 
-.penempatan-jabatan {
+/* .penempatan-jabatan {
     float: right;
     display: relative;
     margin-top: -120px;
     margin-right: 150px;
-}
+} */
 
 /* <---end of top section---> */
 
-/* <-----gambaran diri----------> */
+/* <-----gambaran karakter----------> */
 
-.gambaran-karakter {
+.parent-gambaran-karakter {
     display: grid;
     background-color: #cb243e;
     grid-template-columns: repeat(3, 1fr);
@@ -68,23 +59,28 @@
     grid-row-gap: 10px;
     padding: 30px;
     border-radius: 10px;
+    padding-top: 1px;
+    box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -webkit-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -moz-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
 }
 
-.karakter-disc {
+.gambaran-karakter {
     justify-content: center;
     display: flex;
     grid-column-start: 1;
     grid-column-end: 5;
     font-size: 2vw;
     align-items: flex-start;
+    margin-bottom: 2%;
 }
-.most {
+.most-karakter {
     grid-area: 2 / 1 / 3 / 2;
 }
-.least {
+.least-karakter {
     grid-area: 2 / 2 / 3 / 3;
 }
-.change {
+.change-karakter {
     grid-area: 2 / 3 / 3 / 4;
 }
 .assesor1 {
@@ -113,7 +109,6 @@
 .graph-1 {
     grid-area: 1 / 1 / 2 / 2;
 
-    display: flex;
     justify-content: center;
     margin: auto;
     margin-left: 20px;
@@ -121,11 +116,14 @@
 
 .graph2 {
     grid-area: 1 / 2 / 2 / 3;
+    margin-left: 20px;
 }
 .graph3 {
     grid-area: 1 / 3 / 2 / 4;
 }
 /* <----------END OF CHART---------------> */
+
+/* <----------------Deskripsi Kepribadian---------------> */
 
 .deskripsi-kepribadian {
     background-color: #cb243e;
@@ -138,8 +136,17 @@
     padding-bottom: 20px;
     margin-bottom: 50px;
     box-sizing: border-box;
+    box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -webkit-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -moz-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
 }
 
+.deskripsi-kepribadian h2 {
+    margin-bottom: 2%;
+}
+
+/* <------------end of deskripsi kepribadian---------> */
+/* <---------------job match-------------------> */
 .job-match {
     background-color: #cb243e;
     width: 100%;
@@ -150,4 +157,131 @@
     padding: 10px 30px;
     padding-bottom: 20px;
     box-sizing: border-box;
+    box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -webkit-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
+    -moz-box-shadow: 9px 10px 11px -3px rgba(36, 36, 36, 0.54);
 }
+
+.job-match h2 {
+    margin-bottom: 2%;
+}
+
+/* <----------------end of jobmatch-----------------> */
+
+/* <------------Responsive Phone---------------> */
+@media only screen and (max-width: 800px) {
+    /* <--------CHART---------------> */
+    .chart-result {
+        border-radius: 10px;
+        margin-top: 100px;
+        display: block;
+        margin: auto;
+        margin-left: 20px;
+
+        margin-bottom: 50px;
+    }
+
+    .graph-1 {
+        margin-left: 0;
+    }
+
+    .graph2 {
+    }
+    .graph3 {
+    }
+
+    /* <----------END OF CHART---------------> */
+}
+
+@media only screen and (max-width: 600px) {
+    /* <-----gambaran karakter----------> */
+
+    .parent-gambaran-karakter {
+        display: block;
+        background-color: #cb243e;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 0.5.3fr 0.3fr 1fr;
+
+        color: white;
+        grid-column-gap: 18px;
+        grid-row-gap: 10px;
+        padding: 30px;
+        border-radius: 10px;
+        padding-top: 1px;
+    }
+
+    .gambaran-karakter {
+        justify-content: center;
+        display: flex;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        font-size: 2vw;
+        align-items: flex-start;
+        margin-bottom: 2%;
+    }
+    .most-karakter {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+    .least-karakter {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+    .change-karakter {
+        grid-area: 2 / 3 / 3 / 4;
+    }
+    .assesor1 {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+    .assesor2 {
+        grid-area: 3 / 2 / 4 / 3;
+    }
+    .assesor3 {
+        grid-area: 3 / 3 / 4 / 4;
+    }
+
+    /* ---------end of gambaran diri------------ */
+    .container-hasildisc {
+        padding: 0px 10px;
+        /* overflow: hidden; */
+        /* position: fixed; */
+    }
+
+    /* <-------Top section--------> */
+    .header-hasil {
+        text-align: center;
+        margin: auto;
+        margin-top: 50px;
+
+        /* box-sizing: border-box; */
+    }
+    .header-hasil h1 {
+        font-size: 130%;
+        font-weight: bolder;
+    }
+
+    #data-hasil-test {
+        margin-top: 50px;
+        margin-bottom: 30px;
+        overflow: hidden;
+        display: block;
+        font-size: 3.5vw;
+    }
+
+    #data-hasil-test ul {
+        list-style: none;
+        display: table;
+        margin-bottom: 10px;
+    }
+
+    #data-hasil-test li {
+        display: table-row;
+        margin-bottom: 500px;
+    }
+
+    #data-hasil-test b {
+        display: table-cell;
+        padding-right: 1em;
+        margin-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 700px);
